hydra/auth-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hydra-auth
  namespace: hydra
spec:
  selector:
    app: hydra
  ports:
    - protocol: TCP
      port: 5555
      targetPort: 5555
  type: ClusterIP
