hydra/login.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hydra-idp
  namespace: hydra
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hydra-idp
  template:
    metadata:
      labels:
        app: hydra-idp
    spec:
      containers:
      - name: hydra-idp
        image: docker.prayujt.com/hydra-login
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: hydra-idp
  namespace: hydra
spec:
  selector:
    app: hydra-idp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
